--- a/blog.html
+++ b/blog.html
@@ -73,9 +73,9 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
-      <h2>Chateaugay Hotel</h2>
+      <h2>St. Patrick's First Rectory</h2>
       <hr>
-      <h5>January 15, 2023 | Mick Jarvis</h5>
+      <h5>January 19, 2023 | Mick Jarvis</h5>
     </div>
 
      <!-- Slideshow container -->
@@ -85,44 +85,140 @@
 
 
   <div class="mySlides1 none">
-     <div class="numbertext">1 / 6</div>
-    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_01.jpg" style="width:100%">
+     <div class="numbertext">1 / 5</div>
+    <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_01.jpg" style="width:100%">
   </div>
 
 
   <div class="mySlides1 none">
-     <div class="numbertext">2 / 6</div>
-    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_02.jpg" style="width:100%">
+     <div class="numbertext">2 / 5</div>
+    <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_02.jpg" style="width:100%">
   </div>
 
 
   <div class="mySlides1 none">
-     <div class="numbertext">3 / 6</div>
-    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_03.jpg" style="width:100%">
+     <div class="numbertext">3 / 5</div>
+    <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_03.jpg" style="width:100%">
   </div>
 
 
   <div class="mySlides1 none">
-     <div class="numbertext">4 / 6</div>
-    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_04.jpg" style="width:100%">
+     <div class="numbertext">4 / 5</div>
+    <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_04.jpg" style="width:100%">
   </div>
 
 
   <div class="mySlides1 none">
-     <div class="numbertext">5 / 6</div>
-    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_05.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides1 none">
-     <div class="numbertext">6 / 6</div>
-    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_06.jpg" style="width:100%">
+     <div class="numbertext">5 / 5</div>
+    <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_05.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>A week ago today, I posted a very blurry photo on Facebook of the apartment building that once sat on the lot just west of the current Sunoco station, which is on the corner of Belle Avenue and West Main.</p>
+
+<p>Thank you for all the responses. Your comments added much to the most recent history of the building.</p>
+
+<p>A special thanks to Silas Martin for posting a very clear photo of the exterior of the house and a few photos showing some of the woodwork details of the inside, in that discussion thread.</p>
+
+<p>Now, using Silas’ exterior photo as a starting point, here is a brief follow-up to last weeks’ post. </p>
+
+<p>As I have mentioned before, Rosemary Green is currently researching the history of the present St. Patrick’s Church. This July will mark the 100th anniversary of the laying of the church’s cornerstone. To commemorate that milestone, her history will celebrate how the church came to be and how the construction process unfolded. </p>
+
+<p>Posts like this help by adding more information to her research. So many of you have shared memories and information and a sincere thank you for that. Keep the responses coming [on Facebook or send an email to chathistsoc@gmail.com]!</p>
+
+<p>Now back to that piece of property and the buildings on it… That lot was the site of the first rectory of St. Patrick’s Parish. Father Edmund DePauw, the church’s first pastor from 1863 until 1889, lived in that small structure, which was just a few steps from the Church of St. Patrick (located just to the west of the present-day American Legion building). </p>
+
+<p>That first building on the property was quite small and served as Fr. DePauw’s home during the earliest years of the parish. Unfortunately, no photo of that first rectory is known to exist.</p>
+
+<p>Then, in 1889, Father Peter J. Devlin succeeded, Fr. (by then Monsignor) Edmund DePauw, as the pastor of St. Patrick’s Church. Father DePauw had chosen to retire and return to his native Belgium after more than twenty-five years in Chateaugay.</p>
+
+<p>The local Catholic community was growing rapidly in the late 1880s. Fr. DePauw had already floated the idea of a new, larger church to accommodate the growing congregation. Fr. Devlin saw the parish as active and vital, as Fr. DePauw had. </p>
+
+<p>In addition to the conversation of a possible new church, Devlin also felt a larger rectory was needed. He foresaw the future arrival of assistant pastors as the parish’s needs increased and knew the original rectory would be very inadequate to house (and administrate) the growing parish. He had the smaller, original rectory moved from the lot and built the larger rectory shown here.</p>
+
+<p>Silas’ photo is a clear image of that Rectory constructed by Father Peter Devlin in 1890 in the years before its demolition a few years ago.</p>
+
+<p>In 1930, the new St. Patrick’s was nearing its interior completion and the parish pastor at that time, Father James McClure, had moved into the rectory adjacent to the newly constructed church. </p>
+
+<p>The rectory built by Fr. Devlin was sold to Floyd English who renovated the structure into an apartment building, which it remained until it sat unoccupied in the years leading up to its demolition in 2018.</p>
+
+<p>Be sure to watch for Rosie's St. Patrick’s Church history early this summer!</p>
+
+<hr>
+
+<h4>Photo Captions:</h4>
+<li>1 - A photo of the rectory around 1915</li>
+<li>2 - Another photo, this one taken around 1925</li>
+<li>3 - Silas Martin’s photo taken shortly before the building’s demolition</li>
+<li>4 - Fr. Edmund DePauw</li>
+<li>5 - Fr. Peter J. Devlin</li>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
+      <h2>St. Patrick's First Rectory</h2>
+      <hr>
+      <h5>January 19, 2023 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">1 / 6</div>
+    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">2 / 6</div>
+    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">3 / 6</div>
+    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">4 / 6</div>
+    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">5 / 6</div>
+    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">6 / 6</div>
+    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_06.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -146,7 +242,7 @@ However, I'm hoping these photos above prompt some memories of the place way "ba
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Chateaugay Memories</h2>
@@ -160,33 +256,33 @@ However, I'm hoping these photos above prompt some memories of the place way "ba
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2023-01-07_memories/memories_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2023-01-07_memories/memories_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2023-01-07_memories/memories_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2023-01-07_memories/memories_04.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -211,71 +307,6 @@ However, I'm hoping these photos above prompt some memories of the place way "ba
 <li>Image 2 – Mose Humiston behind the counter</li>
 <li>Image 3 – Peterson's Ice Cream Bar</li>
 <li>Image 4 – L to R: Sam Peterson, Georgie Peterson, and Evie Franklin</li>
-        </div>
-    </div>
-</div>
-
-
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>The Importance of Hometown Newspapers</h2>
-      <hr>
-      <h5>December 18, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 2</div>
-    <img src="blog/imgs/2022-12-18_newspapersource/newspapersource_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 2</div>
-    <img src="blog/imgs/2022-12-18_newspapersource/newspapersource_02.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>My last few weeks have been filled with research about St. Patrick’s Church and its early history. Thank you for the positive comments about my two blog posts. Much of what I used to write the two posts came either from my library and the Society Archives or from the past issues of the Chateaugay Record.</p>
-
-<p>This week, I was asked a question about the beginnings of the present American Legion building on West Main Street. I checked my files and then went to work in the issues of the Chateaugay Record to fill in some gaps in the information I did have (it was built in 1983 and the west addition was completed in 1988 – more on this organization in a future Blog Post or article in the newsletter).</p>
-
-<p>As I was reading through all those newspaper issues, I was reminded for the millionth time how important a hometown paper is to local historians. </p>
-
-<p>The surviving issues of the Chateaugay Journal (1867-1872), the Chateaugay Record (1878-1995), and the second Chateaugay Journal (1896-1909) seem to document everything that happened in Chateaugay and the surrounding area, week after week.</p>
-
-<p>For over one hundred years, Chateaugay’s daily life was reflected in the pages of its newspapers: businesses, birthdays, obituaries, marriages, celebrations, disasters, triumphs – any kind of event, good or bad, appeared in the papers’ pages.</p>
-
-<p>As we research and write our articles, so much information from the pages of the local papers makes its way into the final product. We fully realize the importance of those Chateaugay papers and the role they play in our mission. We use them just about every day. </p>
-
-<p>But, I wondered this week about Chateaugay’s local historians fifty or a hundred years from now. What will they use for research? What will they depend on for a detailed accounting of Chateaugay from 1995 and forward?</p>
-
-<p>Area newspapers routinely publish Chateaugay-related articles, and will continue to do so. However, there is no way that their reporting can approach the detail and completeness of a dedicated staff of local citizens who composed a paper every week filed with all manner of detail about life and the goings-on of our hometown. </p>
-
-<p>We appreciate the area news people who produce those regional newspapers. For example, we clip and file EVERY news article about Chateaugay from the surrounding papers in an attempt to record our present-day local story for those who will follow us. It won’t be anywhere as extensive as the Chateaugay newspapers were able to be up until 1995, but perhaps the clipping files and binders we are assembling will still provide information valuable to local researchers who are working on articles many, many years from now.</p>
-
-<p>We are continually amazed at the breadth and depth of the community history left for us by all of those local newspaper people and we frequently comment about how indebted we are to them and the newspapers they have left behind. </p>
-
-<p>What will future historians say about us and the contemporary history we leave behind for them? </p>
-
-<p>The Chateaugay newspapers we use all the time are that important to local history and research.</p>
-
-<p>Above are images of two of the oldest newspapers in our Archival Collection. They came to us from the McCoy estate.</p>
         </div>
     </div>
 </div>
