--- a/blog.html
+++ b/blog.html
@@ -169,9 +169,9 @@
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
-      <h2>St. Patrick's First Rectory</h2>
+      <h2>The Chateaugay Hotel in the 1930s and '40s</h2>
       <hr>
-      <h5>January 19, 2023 | Mick Jarvis</h5>
+      <h5>January 15, 2023 | Mick Jarvis</h5>
     </div>
 
      <!-- Slideshow container -->
@@ -317,7 +317,7 @@ However, I'm hoping these photos above prompt some memories of the place way "ba
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [January 21, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [January 22, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
