--- a/Buildings.html
+++ b/Buildings.html
@@ -169,9 +169,9 @@
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
-      <h2>St. Patrick's First Rectory</h2>
+      <h2>The Chateaugay Hotel in the 1930s and '40s</h2>
       <hr>
-      <h5>January 19, 2023 | Mick Jarvis</h5>
+      <h5>January 15, 2023 | Mick Jarvis</h5>
     </div>
 
      <!-- Slideshow container -->
@@ -1950,7 +1950,7 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [January 21, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [January 22, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
