--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,41 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>East Main Street in 1912</h2>
+      <hr>
+      <h5>February 4, 2023 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 1</div>
+    <img src="blog/imgs/2023-02-04_eastmainst-1912/eastmainst-1912_01.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>This photo was taken in the spring of 1912. The view is looking eastward on East Main Street. The Town Hall is just one year old and later in the summer of 1912, Main Street will be paved. Note the tall elm trees that lined the street. The man and his team on the left are coming out of John Street. The Kissane block that stood (part of it still stands) between John Street and the Town Hall had not been rebuilt yet, following a fire that destroyed it. And, not a "motorcar" in sight (as they would have said back then).</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>St. Patrick's First Rectory</h2>
       <hr>
       <h5>January 19, 2023 | Mick Jarvis</h5>
@@ -84,39 +119,39 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 5</div>
     <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 5</div>
     <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 5</div>
     <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 5</div>
     <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 5</div>
     <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_05.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -166,7 +201,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>The Chateaugay Hotel in the 1930s and '40s</h2>
@@ -180,45 +215,45 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 6</div>
     <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 6</div>
     <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 6</div>
     <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 6</div>
     <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 6</div>
     <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 6</div>
     <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_06.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -241,83 +276,12 @@ However, I'm hoping these photos above prompt some memories of the place way "ba
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Chateaugay Memories</h2>
-      <hr>
-      <h5>January 7, 2023 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 4</div>
-    <img src="blog/imgs/2023-01-07_memories/memories_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 4</div>
-    <img src="blog/imgs/2023-01-07_memories/memories_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 4</div>
-    <img src="blog/imgs/2023-01-07_memories/memories_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 4</div>
-    <img src="blog/imgs/2023-01-07_memories/memories_04.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>I was recently doing some local research using the issues of the Chateaugay Record from the mid-50s through the mid-60s. After reading through so many newspapers as I took notes, I found myself sitting back and thinking about being a kid during that time. </p>
-
-<p>I think there was no better place for a kid to grow up. I remember so many great times like: sitting on Mose Humiston’s store steps and drinking the big Royal Crown Colas or buying some of his penny candy, Peterson’s and playing pitch in the booths while being yelled at by Evie Franklin for making too much noise and the way the place was always filled to bursting after basketball games, fishing, fishing, and more fishing, the original Jake’s Michigan stand down on West Main, the Skyliner and listening to the “Falcons” and so many other bands, Barnes’ at the Lake (most recently the Lakesider), the Valley Inn, Billy’s Grill, the Gay Bar, the hotel with Patsy Cline blasting on the juke box and all the other bars we were sometimes thrown out of for not having “proof” (and other times not even being checked), Larry Cook and I sitting in Peterson's and drinking Mountain Dew the first day it was ever available here after we had finished work for the day with the "Youth Corps", putting coins on the railroad tracks for the train to flatten as it passed through town, Bernie Mills' diner in the rail car next to the bank,  Paulie Jackson’s Pool Hall, tentatively exploring the Old School which sat cold and empty at the end of Church Street, riding our bikes up to Doug Bova’s store and eating a Sealtest ice cream sandwich while we watched the train go through, the Teen Center, parties at the Dew Drop Inn at the Chasm, camping and building forts up along the Boardman, Quinlan’s with the best meals and pie around, Joe Rovelle running the bowling alley and setting pins there (for a short while), endless baseball games each summer up at the “Old School” after the building was torn down, swimming in “Devil’s Hole”, movies at the theater and Pug McCarthy patrolling the aisles with his flashlight, and so many other great memories.</p>
-
-<p>On Friday and Saturday nights in the ‘50s and early ‘60s, people came to town to do their weekly shopping.  Many would park downtown just to sit in their cars with the windows rolled down and visit with all the folks on the street as they moved from store to store. Those things really cemented the bonds between people and made for a tight-knit little community.</p>
-
-<p>Practically everybody had a nickname, like: Hambone, Gizmo, Mose, Bugsy, Sky, Fish, Cannonball, Pug, Gramp, Red, Tarzan, Doc, Pin, Puddy, Didi, Frenchie, Chief, Twine, and, literally, hundreds of others… Back then communities were much less transient than today. With the Lyon Mountain mines, the milk plant, family farms and all of the local businesses, employment was always available and many generations remained where they were raised and there seemed to be so much more connectedness and strong sense of community. In a town like Chateaugay, which tends to foster strong, heartfelt connections anyway, that sense of belonging and “connectedness” led to longstanding familiarity and the nicknames just followed.	</p>
-
-<p>The way Chateaugay always has and always will connect so deeply with people is proof of how special it is.  This is the ideal hometown…guess that’s why I’m still here.</p>
-
-<p>Chateaugay definitely has changed from the “old days”; lots of vacant buildings, much less activity in the center of the village and new, sometimes more transient, families. But at its core, it still is the same small town that created so many great memories. There are some who live here now that don't know of the memories we carry but there are still many more who do. At its heart, Chateaugay remains pretty special with lots of stories to be remembered, appreciated and told…</p>
-
-<hr>
-
-<h4>Photo Captions:</h4>
-<li>Image 1 – Humiston's Store</li>
-<li>Image 2 – Mose Humiston behind the counter</li>
-<li>Image 3 – Peterson's Ice Cream Bar</li>
-<li>Image 4 – L to R: Sam Peterson, Georgie Peterson, and Evie Franklin</li>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [January 22, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [February 05, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
