--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,127 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Town Hall History</h2>
+      <hr>
+      <h5>February 18, 2023 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 11</div>
+    <img src="blog/imgs/2023-02-18_townhall/townhall_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 11</div>
+    <img src="blog/imgs/2023-02-18_townhall/townhall_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 11</div>
+    <img src="blog/imgs/2023-02-18_townhall/townhall_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 11</div>
+    <img src="blog/imgs/2023-02-18_townhall/townhall_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 11</div>
+    <img src="blog/imgs/2023-02-18_townhall/townhall_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 11</div>
+    <img src="blog/imgs/2023-02-18_townhall/townhall_06.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">7 / 11</div>
+    <img src="blog/imgs/2023-02-18_townhall/townhall_07.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">8 / 11</div>
+    <img src="blog/imgs/2023-02-18_townhall/townhall_08.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">9 / 11</div>
+    <img src="blog/imgs/2023-02-18_townhall/townhall_09.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">10 / 11</div>
+    <img src="blog/imgs/2023-02-18_townhall/townhall_10.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">11 / 11</div>
+    <img src="blog/imgs/2023-02-18_townhall/townhall_11.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Last week’s 1912 photo of the newly-built Town Hall brought forth some questions about the building and its history.</p>
+
+<p>It was built in 1910-1911 after many years of local discussion, editorials in the local newspapers and a long-held public desire for Chateaugay to have a building that could serve as the center of the town’s activities and represent the community well.</p>
+
+<p>Local resident William Johnston, Jr., who passed away unexpectedly in 1909, long wanted Chateaugay to have a town hall. He was part of the Johnston family that already had (and would continue to have) a towering presence in Chateaugay and its business community—think Johnston Lumberyard, Chateaugay Waterworks, Chateaugay Pulp Company, and other businesses that carried the Johnston name.</p>
+
+<p>William Jr. left the Town a bequest in his will of $6000 (worth roughly $214,000 today) with two specific requirements - that the monies could only be used to construct a Town Hall and that the same amount must be matched by either the Town or by benefactor donations.</p>
+
+<p>The community responded and a piece of property was purchased shortly after his will was made public. Plans were made to design a three-story building in the Greek Revival style. Construction began with a groundbreaking at the end of April, 1910. Fourteen months later, in June of 1911, the Town of Chateaugay took possession of the new building.</p>
+
+<p>The public had a chance to tour the new facility. Upon entering through the Doric columned front doors, the inside looked much it does today with a wide hallway and offices on each side. Far to the end of the main foyer, the lobby of the Opera House welcomed patrons to the new performance space. There were two wide, curved staircases that led to the sweeping balcony on the second level. At each end of the balcony level where the tier met the outside walls, walkways from the balcony stretched along the outside walls and led to raised loge boxes which overlooked the stage.</p>
+
+<p>The stage itself took up the entire north wall of the building. Dressing rooms were located below the stage area, on the basement level, and were accessed by a door in the center of the stage front, in the orchestra pit.</p>
+
+<p>The basement level of the building contained the dressing rooms and bathrooms for the performers, a local lock-up with two cells under the front portion of the building and a state-of–the-art heating system in between.</p>
+
+<p>The third floor contained the theater balcony and a large dance hall/assembly space which took up the entire width of the front of the top floor.</p>
+
+<p>The imposing, new Town Hall quickly became a showplace in the North Country. The columned entrance with its soaring pediment some two stories above the entering public’s heads made quite a statement as it dominated Main Street.</p>
+
+<p>Sadly, the building would burn in 1940. Because the interior framing (floor joists, flooring, walls, and stairs) was all of wood, the exterior brick walls contained the heat of the fire and completely incinerated everything within the four exterior walls.</p>
+
+<p>Within a year, it was built back – better than ever. Following the blaze, the exterior walls were found to be still sound and with a new roof and new interior floors and framing, the building rose again. This time, the floors were poured concrete as were the stairs. Most of the interior walls were also of masonry which greatly reduced future fire hazards as much less of the interior was built of wood.</p>
+
+<p>In recent years, the Town Board has undertaken many projects within and outside the building to update features as needed and to improve the interior spaces which are now filled with a variety of public activities and municipal functions.</p>
+
+<p>Above are a few more photos beyond the single one from last weekend. Each allows more glimpses into the features of the building then and now.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>East Main Street in 1912</h2>
       <hr>
       <h5>February 4, 2023 | Mick Jarvis</h5>
@@ -84,15 +205,15 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2023-02-04_eastmainst-1912/eastmainst-1912_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -105,7 +226,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>St. Patrick's First Rectory</h2>
@@ -119,39 +240,39 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 5</div>
     <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 5</div>
     <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 5</div>
     <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 5</div>
     <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 5</div>
     <img src="blog/imgs/2023-01-19_stpatrectory/stpatrectory_05.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -200,88 +321,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>The Chateaugay Hotel in the 1930s and '40s</h2>
-      <hr>
-      <h5>January 15, 2023 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 6</div>
-    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 6</div>
-    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 6</div>
-    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 6</div>
-    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_04.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">5 / 6</div>
-    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_05.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">6 / 6</div>
-    <img src="blog/imgs/2023-01-15_chateaugayhotel-2/chateaugayhotel-2_06.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>I was stopped at the light at the Four Corners this afternoon. I happened to look over at the Hotel while waiting for the light to change.</p>
-
-<p>Many comments have been made on our Facebook page over the years about how it has fallen into ruin.
-However, I'm hoping these photos above prompt some memories of the place way "back in the day" and when it was a busy part of downtown.</p>
-
-<p>The first two are shots from 1935. Note the traffic light in the middle of the intersection. The hotel was called the Chateau then. The lobby had floor-to-ceiling windows so those sitting there could watch traffic and passersby and solve the problems of the world.</p>
-
-<p>The next two are from 1944. Notice the tin ceilings in both the bar and the Arabian Room (dining room). Looking out the window of the dining room, the Dairy and the Liquor Store are right across Depot Street.</p>
-
-<p>The last two are from 1949. The dining room photo shows the smaller bar and the bandstand. The glimpse of the wallpaper on the right compliments the dining room's name, "The Arabian Room".</p>
-
-<p>There were more "glory" years to come - the ‘50s, ‘60s, ‘70s, and on... until it closed for good.</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [February 05, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [February 19, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
