--- a/Transportation.html
+++ b/Transportation.html
@@ -73,6 +73,76 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>The Red Bridge</h2>
+      <hr>
+      <h5>May 13, 2023 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 3</div>
+    <img src="blog/imgs/2023-05-13_redbridge/redbridge_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 3</div>
+    <img src="blog/imgs/2023-05-13_redbridge/redbridge_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 3</div>
+    <img src="blog/imgs/2023-05-13_redbridge/redbridge_03.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>People often ask me what I like best about Chateaugay and area history. My usual answer is: "all of it." This little town keeps revealing interesting and engaging stories that just seem to captivate so many people.</p>
+
+<p>After giving it some thought, I think I'm particularly drawn to Chateaugay's earliest years, the Fairgrounds at the end of Collins Street, the Chasm, town team baseball, the railroad, and Douglas Hollow. There are many others, but these are particularly enjoyable to research.</p> 
+
+<p>However, there is one particular thing in the Douglas Hollow area that I really gravitate towards...the Red Bridge.</p>
+
+<p>Most don't know that Chateaugay had a covered bridge that was painted barn red when it was built in 1843. It became a symbol of the community of Chateaugay for many years. </p>
+
+<p>The wooden covered bridge was demolished in 1901 and replaced with an arched metal structure that was removed in 1940.</p>
+
+<p>Where was it? Well, if you were to look south from the present-day bridge that brings Route 11 over the Chateaugay River, the Red Bridge crossed the water about half way to the old railroad tunnel and tracks.</p>
+
+<p>So, for 97 years, a bridge with very humble beginnings, spanned the river closer to the tracks.</p>
+
+<p>The colorized photo (an excellent recoloring by Scott Durant of Malone, by the way) above shows the Red Bridge and the Globe Grist Mill looking north towards where the present bridge is. </p>
+
+<p>The second photo shows the view under the bridge, again looking north, and the grist mill in Douglass Hollow comes into view.</p>
+
+<p>The third photo is a Google Earth view showing the location of our covered bridge in relation to the present-day bridge and the railroad.</p>
+
+<p>I was going to write a longer blog post here about the Red Bridge, but after looking over my research, I believe I have enough material for a full-length article in an upcoming newsletter, so this can serve as an intro to a much longer article.</p>
+
+<p>At any rate, here are a few views of Chateaugay's wooden covered bridge which spanned the river for 58 years.</p>
+
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Population Changes in Chateaugay</h2>
       <hr>
       <h5>April 24, 2022 | Mick Jarvis</h5>
@@ -84,21 +154,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2022-04-24_populationchanges/populationchanges_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2022-04-24_populationchanges/populationchanges_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -127,7 +197,7 @@ The entire Town's population was recorded as 1,743. That is down from 2,155 in 2
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>"Linen" Postcards</h2>
@@ -141,45 +211,45 @@ The entire Town's population was recorded as 1,743. That is down from 2,155 in 2
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 6</div>
     <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 6</div>
     <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 6</div>
     <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 6</div>
     <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 6</div>
     <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 6</div>
     <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_06.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -206,7 +276,7 @@ The entire Town's population was recorded as 1,743. That is down from 2,155 in 2
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Carrying the Mail in the Olden Days</h2>
@@ -220,21 +290,21 @@ The entire Town's population was recorded as 1,743. That is down from 2,155 in 2
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -298,7 +368,7 @@ The entire Town's population was recorded as 1,743. That is down from 2,155 in 2
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Railroad: Freight Operation</h2>
@@ -312,33 +382,33 @@ The entire Town's population was recorded as 1,743. That is down from 2,155 in 2
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_04.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 </div>
 <br>
 
@@ -417,7 +487,7 @@ The entire Town's population was recorded as 1,743. That is down from 2,155 in 2
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>The Railroad in Chateaugay</h2>
@@ -431,81 +501,81 @@ The entire Town's population was recorded as 1,743. That is down from 2,155 in 2
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">1 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">2 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">3 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">4 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">5 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">6 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">7 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">8 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">9 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">10 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">11 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_11.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">12 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_12.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
 </div>
 <br>
 
@@ -590,7 +660,7 @@ Indeed, their vision was not far wrong. By the late 1800s the town was booming, 
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [April 01, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [May 16, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
