--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,76 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>The Red Bridge</h2>
+      <hr>
+      <h5>May 13, 2023 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 3</div>
+    <img src="blog/imgs/2023-05-13_redbridge/redbridge_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 3</div>
+    <img src="blog/imgs/2023-05-13_redbridge/redbridge_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 3</div>
+    <img src="blog/imgs/2023-05-13_redbridge/redbridge_03.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>People often ask me what I like best about Chateaugay and area history. My usual answer is: "all of it." This little town keeps revealing interesting and engaging stories that just seem to captivate so many people.</p>
+
+<p>After giving it some thought, I think I'm particularly drawn to Chateaugay's earliest years, the Fairgrounds at the end of Collins Street, the Chasm, town team baseball, the railroad, and Douglas Hollow. There are many others, but these are particularly enjoyable to research.</p> 
+
+<p>However, there is one particular thing in the Douglas Hollow area that I really gravitate towards...the Red Bridge.</p>
+
+<p>Most don't know that Chateaugay had a covered bridge that was painted barn red when it was built in 1843. It became a symbol of the community of Chateaugay for many years. </p>
+
+<p>The wooden covered bridge was demolished in 1901 and replaced with an arched metal structure that was removed in 1940.</p>
+
+<p>Where was it? Well, if you were to look south from the present-day bridge that brings Route 11 over the Chateaugay River, the Red Bridge crossed the water about half way to the old railroad tunnel and tracks.</p>
+
+<p>So, for 97 years, a bridge with very humble beginnings, spanned the river closer to the tracks.</p>
+
+<p>The colorized photo (an excellent recoloring by Scott Durant of Malone, by the way) above shows the Red Bridge and the Globe Grist Mill looking north towards where the present bridge is. </p>
+
+<p>The second photo shows the view under the bridge, again looking north, and the grist mill in Douglass Hollow comes into view.</p>
+
+<p>The third photo is a Google Earth view showing the location of our covered bridge in relation to the present-day bridge and the railroad.</p>
+
+<p>I was going to write a longer blog post here about the Red Bridge, but after looking over my research, I believe I have enough material for a full-length article in an upcoming newsletter, so this can serve as an intro to a much longer article.</p>
+
+<p>At any rate, here are a few views of Chateaugay's wooden covered bridge which spanned the river for 58 years.</p>
+
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>201-Year-Old Desk Returns to Chateaugay</h2>
       <hr>
       <h5>March 22, 2023 | Mick Jarvis</h5>
@@ -84,51 +154,51 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 7</div>
     <img src="blog/imgs/2023-03-22_jordan/jordan_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 7</div>
     <img src="blog/imgs/2023-03-22_jordan/jordan_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 7</div>
     <img src="blog/imgs/2023-03-22_jordan/jordan_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 7</div>
     <img src="blog/imgs/2023-03-22_jordan/jordan_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 7</div>
     <img src="blog/imgs/2023-03-22_jordan/jordan_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 7</div>
     <img src="blog/imgs/2023-03-22_jordan/jordan_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">7 / 7</div>
     <img src="blog/imgs/2023-03-22_jordan/jordan_07.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -157,7 +227,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Town Hall History</h2>
@@ -171,75 +241,75 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 11</div>
     <img src="blog/imgs/2023-02-18_townhall/townhall_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 11</div>
     <img src="blog/imgs/2023-02-18_townhall/townhall_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 11</div>
     <img src="blog/imgs/2023-02-18_townhall/townhall_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 11</div>
     <img src="blog/imgs/2023-02-18_townhall/townhall_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 11</div>
     <img src="blog/imgs/2023-02-18_townhall/townhall_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 11</div>
     <img src="blog/imgs/2023-02-18_townhall/townhall_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">7 / 11</div>
     <img src="blog/imgs/2023-02-18_townhall/townhall_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">8 / 11</div>
     <img src="blog/imgs/2023-02-18_townhall/townhall_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">9 / 11</div>
     <img src="blog/imgs/2023-02-18_townhall/townhall_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">10 / 11</div>
     <img src="blog/imgs/2023-02-18_townhall/townhall_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">11 / 11</div>
     <img src="blog/imgs/2023-02-18_townhall/townhall_11.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -277,47 +347,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>East Main Street in 1912</h2>
-      <hr>
-      <h5>February 4, 2023 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 1</div>
-    <img src="blog/imgs/2023-02-04_eastmainst-1912/eastmainst-1912_01.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>This photo was taken in the spring of 1912. The view is looking eastward on East Main Street. The Town Hall is just one year old and later in the summer of 1912, Main Street will be paved. Note the tall elm trees that lined the street. The man and his team on the left are coming out of John Street. The Kissane block that stood (part of it still stands) between John Street and the Town Hall had not been rebuilt yet, following a fire that destroyed it. And, not a "motorcar" in sight (as they would have said back then).</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [April 01, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [May 16, 2023]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
